moved .env into root, debug issues

--- a/src/utils/Navbar.scss
+++ b/src/utils/Navbar.scss
@@ -27,7 +27,7 @@
   }
 
   &__link {
-    color: #333;
+    color: #a8a8a8;
     text-decoration: none;
     display: flex;
     justify-content: center;
