--- a/src/utils/Navbar.scss
+++ b/src/utils/Navbar.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: transparent;
+  background-color: white;
   box-shadow: 0 -2px 15px rgba(0, 0, 0, 0.1);
   padding: 10px 0;
   border-radius: 20px 20px 0 0;
