--- a/src/utils/Navbar.scss
+++ b/src/utils/Navbar.scss
@@ -40,7 +40,7 @@
     transition: color 0.3s ease, transform 0.2s ease;
 
     &:hover {
-      color: #00b2a9;
+      color: #c8102e;
       opacity: 1;
       transform: scale(1.05);
     }
