--- a/src/utils/flex.scss
+++ b/src/utils/flex.scss
@@ -1,3 +1,12 @@
 .text-center {
   text-align: center;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.align-center {
+  align-items: center;
+}
