--- a/src/utils/fonts.scss
+++ b/src/utils/fonts.scss
@@ -1,8 +1,26 @@
 .h1 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.h2 {
   font-size: 16px;
   font-weight: bold;
 }
 
+.fs-14 {
+  font-size: 14px;
+}
+
 .fs-12 {
   font-size: 12px;
+}
+
+.input {
+  width: 80%;
+  height: 25px;
+  border: 2px solid #fff;
+  border-bottom: 1px solid #979797;
+  padding: 5px;
+  font-size: 14px;
 }
