--- a/src/utils/fonts.scss
+++ b/src/utils/fonts.scss
@@ -16,11 +16,32 @@
   font-size: 12px;
 }
 
+.fs-22 {
+  font-size: 22px;
+}
+
 .input {
-  width: 80%;
+  width: 70%;
   height: 25px;
   border: 2px solid #fff;
-  border-bottom: 1px solid #979797;
+  border-bottom: 1px solid #c7c7c7;
   padding: 5px;
   font-size: 14px;
+  outline: none;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.red {
+  color: #c8102e; /* Red color */
+}
+
+.route {
+  color: #00b2a9; /* Route color */
+}
+
+.full-stop {
+  color: #f6eb61; /* Full stop color */
 }
