--- a/src/utils/margins.scss
+++ b/src/utils/margins.scss
@@ -1,3 +1,7 @@
+.mt-10 {
+  margin-top: 10px;
+}
+
 .mt-30 {
   margin-top: 30px;
 }
@@ -8,4 +12,16 @@
 
 .ml-10 {
   margin-left: 10px;
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.centre-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
