--- a/src/utils/buttons.scss
+++ b/src/utils/buttons.scss
@@ -1,8 +1,8 @@
 .button {
-  padding: 10px 20px;
+  padding: 7px 16px;
   border: none;
   border-radius: 25px;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -27,4 +27,9 @@
 
 .button--secondary:hover {
   background-color: #e3d14b; /* Darker yellow on hover */
+}
+
+.button--tertiary {
+  background-color: #ecebeb; /* Secondary color */
+  color: #333;
 }
