--- a/src/utils/margins.scss
+++ b/src/utils/margins.scss
@@ -2,6 +2,10 @@
   margin-top: 10px;
 }
 
+.mt-20 {
+  margin-top: 20px;
+}
+
 .mt-30 {
   margin-top: 30px;
 }
@@ -24,4 +28,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.bottom {
+  margin-bottom: 1px;
 }
