--- a/src/utils/fonts.scss
+++ b/src/utils/fonts.scss
@@ -26,7 +26,8 @@
   border: 2px solid #fff;
   border-bottom: 1px solid #c7c7c7;
   padding: 5px;
-  font-size: 12px;
+  font-size: 14px;
+  border-radius: 0px;
   outline: none;
 }
 
