Login logo chnaged font size

--- a/src/utils/fonts.scss
+++ b/src/utils/fonts.scss
@@ -17,7 +17,7 @@
 }
 
 .fs-22 {
-  font-size: 22px;
+  font-size: 46px;
 }
 
 .input {
@@ -44,7 +44,7 @@
 }
 
 .full-stop {
-  color: #f6eb61; /* Full stop color */
+  color: #c8102e; /* Full stop color */
 }
 
 /* Example of error styling */
