--- a/src/utils/fonts.scss
+++ b/src/utils/fonts.scss
@@ -31,6 +31,18 @@
   outline: none;
 }
 
+.input-search {
+  width: 100%;
+  height: 25px;
+  border: 2px solid #f4f4f4;
+  border-bottom: 1px solid #c7c7c7;
+  padding: 5px;
+  font-size: 14px;
+  border-radius: 0px;
+  outline: none;
+  background-color: #f4f4f4;
+}
+
 .bold {
   font-weight: bold;
 }
