--- a/src/utils/margins.scss
+++ b/src/utils/margins.scss
@@ -22,6 +22,10 @@
   margin-bottom: 30px;
 }
 
+.mb-10 {
+  margin-bottom: 10px;
+}
+
 .centre-screen {
   display: flex;
   flex-direction: column;
