--- a/src/utils/tabs.scss
+++ b/src/utils/tabs.scss
@@ -2,7 +2,6 @@
 .tabs {
   margin-bottom: 20px;
   position: relative;
-  text-align: center;
 }
 
 /* Tab Buttons Container */
@@ -55,7 +54,7 @@
 
 /* Input Search Styling */
 .input-search {
-  width: 85%; /* Adjust to fit nicely in mobile view */
+  width: 80%; /* Adjust to fit nicely in mobile view */
   max-width: 400px; /* Cap width for larger screens */
   padding: 8px 12px;
   margin-top: 10px;
@@ -70,4 +69,9 @@
   margin-top: 20px;
   font-size: 14px;
   color: #555;
+  font-weight: 500;
+}
+
+.text-center {
+  text-align: center;
 }
