--- a/src/utils/AddFlights.scss
+++ b/src/utils/AddFlights.scss
@@ -193,3 +193,27 @@
   font-size: 14px;
   width: 100%;
 }
+
+.button.loading {
+  position: relative;
+  cursor: not-allowed;
+}
+
+.spinner {
+  border: 2px solid transparent;
+  border-top: 2px solid white;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 0.8s linear infinite;
+  display: inline-block;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
