--- a/src/utils/Home.scss
+++ b/src/utils/Home.scss
@@ -98,5 +98,19 @@
 .loading {
   text-align: center;
   font-size: 10px;
-  color: #007aff;
+  color: #c8102e;
+}
+
+.button--link {
+  background: none;
+  border: none;
+  color: #c8102e;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 0;
+  font-size: inherit;
+}
+
+.button--link:hover {
+  color: #c8102e;
 }
