--- a/src/utils/fonts.scss
+++ b/src/utils/fonts.scss
@@ -61,7 +61,7 @@
 
 /* Example of error styling */
 .error-message {
-  color: red; /* Set the error text color to red */
+  color: #c8102e; /* Set the error text color to red */
   font-size: 12px; /* Define the font size for error messages */
   font-weight: bold;
   margin-top: 10px;
@@ -70,4 +70,8 @@
 /* Optionally, if you want to handle fs-12 specifically */
 .fs-12 {
   font-size: 12px; /* Apply font size 12px */
+}
+
+.fw-400 {
+  font-weight: 800;
 }
