--- a/src/utils/buttons.scss
+++ b/src/utils/buttons.scss
@@ -46,3 +46,22 @@
   text-align: center;
   animation: fadeIn 0.5s ease-in-out; /* Smooth fade-in effect */
 }
+
+.return-flight-toggle {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px; /* Optional: Adjust the gap between buttons */
+}
+
+// .button {
+//   flex: 1;
+//   padding: 10px;
+//   cursor: pointer;
+//   text-align: center;
+// }
+
+.button--selected {
+  color: #c8102e;
+  border: 1px solid #c8102e;
+  background-color: transparent;
+}
