--- a/src/utils/AddFlights.scss
+++ b/src/utils/AddFlights.scss
@@ -189,6 +189,7 @@
 .input {
   border: 1px solid #c7c7c7;
   border-radius: 5px;
+  height: 20px;
   padding: 10px;
   font-size: 14px;
   width: 100%;
