--- a/src/utils/buttons.scss
+++ b/src/utils/buttons.scss
@@ -53,15 +53,15 @@
   gap: 10px; /* Optional: Adjust the gap between buttons */
 }
 
-// .button {
-//   flex: 1;
-//   padding: 10px;
-//   cursor: pointer;
-//   text-align: center;
-// }
-
 .button--selected {
   color: #c8102e;
   border: 1px solid #c8102e;
   background-color: transparent;
+  width: 65%;
+}
+
+.button--non-selected {
+  color: #c8102e;
+  background-color: #ecebeb;
+  width: 65%;
 }
